--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,4 @@
 <nav class="navbar">
-    <a routerLink="">Dashboard</a>
-    <ul>
-        <li><a routerLink="emotes" routerLinkActive="active">Emotes</a></li>
-        <li><a routerLink="cheers" routerLinkActive="active">Cheers</a></li>
-    </ul>
+    <a class="logo" routerLink="">Dashboard</a>
+    <a class="logout" routerLink="logout">Logout</a>
 </nav>
