--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,11 @@
-<div class="box">
-    box1
-</div>
-
-<div class="box">
-    box2
+<div class="box-container">
+    <div class="box">
+        box1
+    </div>
+    <div class="box">
+        box2
+    </div>
+    <div class="box">
+        box3
+    </div>
 </div>
