--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,3 +1,10 @@
-<p>
-  menu works!
-</p>
+<ul>
+    <li *ngFor="let item of menuItems">
+        <a [routerLink]="[item.path]" routerLinkActive="active">{{ item.title }}</a>
+    </li>
+
+<!--
+    <li><a routerLink="emotes">Emotes</a></li>
+    <li><a routerLink="cheers" routerLinkActive="active">Cheers</a></li>
+-->
+</ul>
