Navbar and menu integration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
-<app-menu></app-menu>
 
-{{config|json}}
-
-<router-outlet></router-outlet>
+<div class="container">
+    <app-menu></app-menu>
+    <router-outlet></router-outlet>
+</div>
