--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,15 @@
 <div class="login">
     <h2>Login</h2>
-    <form name="form" (ngSubmit)="login()">
+    <form name="form" (ngSubmit)="login()" #loginForm="ngForm">
         <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" name="username" id="username"  />
+            <input type="text" class="form-control" name="username" id="username" required />
         </div>
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" name="password" id="password" />
+            <input type="password" class="form-control" name="password" id="password" required />
         </div>
+
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Login</button>
         </div>
