--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,10 +1,9 @@
-<ul>
-    <li *ngFor="let item of menuItems">
-        <a [routerLink]="[item.path]" routerLinkActive="active">{{ item.title }}</a>
-    </li>
-
-<!--
-    <li><a routerLink="emotes">Emotes</a></li>
-    <li><a routerLink="cheers" routerLinkActive="active">Cheers</a></li>
--->
-</ul>
+<div class="menu">
+    <ul class="fa-ul">
+        <li *ngFor="let item of menuItems">
+            <a [routerLink]="[item.routerLink]" routerLinkActive="active">
+                <span class="fa fa-li" [ngClass]="item.icon"></span>{{ item.title }}
+            </a>
+        </li>
+    </ul>
+</div>
