--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,8 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
 
-$body-bg-color: #171D22;
 $body-bg-color: #464E5A;
 $text-color: #fff;
+
+$box-bg-color: #171D22;
+
+$menu-bg-color: #1E262D;
+
+$navbar-bg-color: #262F37;
+$navbar-bg-color-hover: #0E1317;
+
+$link-color: #fff;
+$link-color-hover: #408BEA;
+
 
 /**** App roots ****/
 $assets-root: '~/assets/';
