--- a/src/app/common/navbar/navbar.component.scss
+++ b/src/app/common/navbar/navbar.component.scss
@@ -1,4 +1,4 @@
-@import "../../assets/styles/variables";
+@import "../../../assets/styles/variables";
 
 .navbar {
   background: $navbar-bg-color;
@@ -7,6 +7,7 @@
   text-align: right;
 
   .item {
+    position: relative;
     display: inline-block;
     height: 60px;
     line-height: 60px;
@@ -14,7 +15,11 @@
     font-size: 14px;
     font-weight: 700;
     outline: none;
+    user-select: none;
     opacity: .8;
+    .fa {
+      margin-right: 5px;
+    }
   }
 
   .item-link {
@@ -29,9 +34,8 @@
     }
   }
 
-  .logo {
+  .home {
     float: left;
   }
-
 }
 
