--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
+    <app-alert></app-alert>
     <app-menu></app-menu>
     <router-outlet></router-outlet>
 </div>
